syntax = "proto3";

option csharp_namespace = "GrpcServiceTemp";

package profile;


service MongoProfileService {
	rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
	rpc GetProfileByGuid (GetProfileByGuidRequest) returns (GetProfileByGuidResponse);
	rpc GetProfileByUsername (GetProfileByUsernameRequest) returns (GetProfileByUsernameResponse);
	rpc CheckUsernameAvailability(UsernameAvailabilityRequest) returns (UsernameAvailabilityResponse);
}

message UsernameAvailabilityRequest {
	string Username = 1;
}

message UsernameAvailabilityResponse {
	bool Available = 1;
}

message UpdateProfileRequest {
	string Guid = 1;
	string Username = 2;
	string First_Name = 3;
	string Last_Name = 4;
	string Bio = 5;
	string Hometown = 6;
	string Occupation = 7;
	string ExternalLink = 8;
	string DateOfBirth = 9;
	string ProfilePictureUrl = 10;
	string CoverPictureUrl = 11;
}

message UpdateProfileResponse {
	string message = 1;
}

message GetProfileByGuidRequest {
	string Guid = 1;
}

message GetProfileByGuidResponse {
	string Username = 1;
	string Userid = 2;
	string First_Name = 3;
	string Last_Name = 4;
	string Bio = 5;
	string Hometown = 6;
	string Occupation = 7;
	string ExternalLink = 8;
	string DateOfBirth = 9;
	string ProfilePictureUrl = 10;
	string CoverPictureUrl = 11;
}

message GetProfileByUsernameResponse {
	string Username = 1;
	string Userid = 2;
	string First_Name = 3;
	string Last_Name = 4;
	string Bio = 5;
	string Hometown = 6;
	string Occupation = 7;
	string ExternalLink = 8;
	string DateOfBirth = 9;
	string ProfilePictureUrl = 10;
	string CoverPictureUrl = 11;
}

message GetProfileByUsernameRequest {
	string Username = 1;
}